feat: add default Xmx Xms settings